# classical-raytracer-lecture-2020

./: .gitignore  CMakeLists.txt  README.md
ref/: CMakeLists.txt  intersect-info.h  main.cpp  openmp-test.cpp  ray.h  raytracer-ao.cpp  raytracer-openmp.cpp  raytracer-ssaa.cpp  raytracer.cpp  test-ao.cpp  test-camera.cpp  test-image.cpp  test-intersect.cpp  test-rng.cpp  test-sphere.cpp  vec3.h
ref/src/: sphere.h  vec3.h
